@@ -1,3 +1,6 @@
+08/01/2018
+- add option to set an upper limit to the number of concurrent state cookies via OIDCStateMaxNumberOfCookies; see #331
+
 07/06/2018
 - abort when string length for remote user name substitution is larger than 255 characters
 - release 2.3.7
